# devaimazing

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  journal de test.txt  pyproject.toml
.obsidian/: workspace.json
config/: studio.yml
config/projects/: demo-todo-app.yml  todo-list.yml  todo-list2.yml  webaimazing-v2.yml
docs/: agents.md  infra-topology.md  llm-strategy.md  metrics.md  references-externes.md  roadmap.md  workflow.md
docs/adr/: 0001-stateless-agents.md  0002-stub-first.md  0003-sqlite-checkpointer.md  0004-agpl-licence.md  0005-langgraph.md  0006-llm-strategy.md  0007-branch-naming-and-incremental-commits.md  0007-checklist-intention-phase1.md  0008-checklist-intention-phase1.md  0009-pseudonymisation-anti-fraude.md  0010-quatre-piliers-non-fonctionnels-dette-justifiee.md  0011-orchestrateur-custom-vs-claude-remote.md  0012-checklist-secrets-phase1.md  0013-interface-telegram-agent-devaimazing.md  0014-whisper-transcription-vocale.md
docs/references-externes/: consistent_imagery_generation.ipynb  knowledge_graph_generation.ipynb  (+1 more)
prompts/: architect.md  backend.md  devaimazing.md  frontend.md  pm.md  security.md  test.md
scripts/: new-project.sh  setup.sh
skills/: data-privacy.md  documentation.md  error-handling.md  factorization.md  logging-conventions.md  non-regression.md  retry-patterns.md  scalability.md  secrets-management.md  stub-first.md
templates/: architect-map.md.template  card-agent.md.template  card-root-import.md.template  card-root.md.template  project-config.yml.template  project-map.md.template
(+44 files in other folders)
